@@ -6,7 +6,6 @@ import static com.sap.olingo.jpa.processor.core.exception.ODataJPAQueryException
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.apache.olingo.commons.api.http.HttpStatusCode.INTERNAL_SERVER_ERROR;
 
@@ -17,11 +16,12 @@ import java.util.Set;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import javax.persistence.criteria.Expression;
-import javax.persistence.criteria.Order;
-import javax.persistence.criteria.Path;
-import javax.persistence.criteria.Selection;
-import javax.persistence.criteria.Subquery;
+
+import jakarta.persistence.criteria.Expression;
+import jakarta.persistence.criteria.Order;
+import jakarta.persistence.criteria.Path;
+import jakarta.persistence.criteria.Selection;
+import jakarta.persistence.criteria.Subquery;
 
 import org.apache.olingo.commons.api.ex.ODataException;
 import org.apache.olingo.commons.api.http.HttpStatusCode;
@@ -82,7 +82,7 @@ final class JPARowNumberFilterQuery extends JPAExpandFilterQuery {
   public <T> Subquery<T> getSubQuery(@Nullable final Subquery<?> childQuery,
       @Nullable final VisitableExpression expression) throws ODataApplicationException {
 
-    try (JPARuntimeMeasurement meassument = debugger.newMeasurement(this, "createSubQuery")) {
+    try (JPARuntimeMeasurement measurement = debugger.newMeasurement(this, "createSubQuery")) {
       final ProcessorSubquery<T> nextQuery = (ProcessorSubquery<T>) this.subQuery;
       this.queryRoot = subQuery.from(this.jpaEntity.getTypeClass());
       this.navigationInfo.setFromClause(queryRoot);
@@ -105,7 +105,7 @@ final class JPARowNumberFilterQuery extends JPAExpandFilterQuery {
         return columns
             .stream()
             .map(key -> mapOnToSelection(key.getRightPath(), queryJoinTable, null))
-            .collect(toList());
+            .toList();
       } catch (final ODataJPAModelException e) {
         if (e.getId().equals(NO_JOIN_TABLE_TYPE.getKey())) {
           throw new ODataJPAQueryException(QUERY_PREPARATION_JOIN_TABLE_TYPE_MISSING, INTERNAL_SERVER_ERROR,
@@ -119,14 +119,14 @@ final class JPARowNumberFilterQuery extends JPAExpandFilterQuery {
 
   private List<Selection<?>> createSelectForParent() {
 
-    try (JPARuntimeMeasurement meassument = debugger.newMeasurement(this, "createSelectClause")) {
+    try (JPARuntimeMeasurement measurement = debugger.newMeasurement(this, "createSelectClause")) {
       final List<Selection<?>> selections = new ArrayList<>();
       // Build select clause
       for (final JPAPath jpaPath : this.outerSelections) {
         if (jpaPath.isPartOfGroups(groups)) {
-          final Path<?> p = ExpressionUtil.convertToCriteriaPath(joinTables, queryRoot, jpaPath.getPath());
-          p.alias(jpaPath.getAlias());
-          selections.add(p);
+          final Path<?> path = ExpressionUtility.convertToCriteriaPath(joinTables, queryRoot, jpaPath.getPath());
+          path.alias(jpaPath.getAlias());
+          selections.add(path);
         }
       }
       return selections;
